# r-bfgs

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
benches/: bench_functions.rs  bfgs.rs  bfgs_backtracking.rs  gradient_descent.rs  lbfgs.rs  lbfgs_backtracking.rs
examples/: example_bfgs.rs  example_plot.rs
src/: bfgs.rs  exit_condition.rs  gradient_descent.rs  lbfgs.rs  lib.rs  line_search.rs  log.rs  plot.rs  settings.rs
src/lbfgs/: lbfgs_deque.rs
src/plot/: history.rs  plot_points.rs
tests/: test_functions.rs  test_gradient_descent.rs  test_history.rs  test_utils.rs  tests_bfgs.rs  tests_bfgs_backtracking.rs  tests_lbfgs.rs  tests_lbfgs_backtracking.rs
