[package]
name = "bfgs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blas-src = { version = "*", features=["openblas"]}
cblas = "*"
num = "*"
log = "*"
float_eq = "*"

[dev-dependencies]
rand = "*"
criterion = { version = "*", features = ["html_reports"] }

[[bench]]
name = "bfgs"
harness = false

[[bench]]
name = "lbfgs"
harness = false

[[bench]]
name = "lbfgs_backtracking"
harness = false

[[bench]]
name = "bfgs_backtracking"
harness = false
