[package]
name = "bfgs"
version = "0.1.0"
edition = "2021"
authors = ["Alessandro Casalino <a.casalino@cineca.it>"]
repository = "https://github.com/alessandrocasalino/r-bfgs"
license = "MIT"
description = "A BFGS implementation in Rust using BLAS routines."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blas-src = { version = "*", features = ["openblas"] }
cblas = "*"
num = "*"
log = "*"
float_eq = "*"
plotters = "*"

[dev-dependencies]
rand = "*"
criterion = { version = "*", features = ["html_reports"] }

# Benchmarks with Criterion

[[bench]]
name = "bfgs"
harness = false

[[bench]]
name = "lbfgs"
harness = false

[[bench]]
name = "lbfgs_backtracking"
harness = false

[[bench]]
name = "bfgs_backtracking"
harness = false

[[bench]]
name = "gradient_descent"
harness = false
